--- a/car_rental/Gemfile
+++ b/car_rental/Gemfile
@@ -13,6 +13,7 @@ gem 'puma', '~> 4.1'
 gem 'will_paginate', '~> 3.1.0'
 gem 'bootstrap-will_paginate' , '1.0.0'
 gem 'bcrypt', '~> 3.1.7'
+gem "bcrypt-ruby", :require => "bcrypt"
 
 gem 'bootstrap', '~> 4.4.1'
 gem 'jquery-rails'
