--- a/car_rental/Gemfile
+++ b/car_rental/Gemfile
@@ -12,8 +12,6 @@ gem 'puma', '~> 4.1'
 
 gem 'will_paginate', '~> 3.1.0'
 gem 'bootstrap-will_paginate' , '1.0.0'
-gem 'bcrypt', '~> 3.1.7'
-gem "bcrypt-ruby", :require => "bcrypt"
 
 gem 'bootstrap', '~> 4.4.1'
 gem 'jquery-rails'
@@ -29,11 +27,12 @@ gem 'jbuilder', '~> 2.7'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+gem 'bcrypt', '~> 3.1.7'
 
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
-
+# required for integration test
+gem 'rails-controller-testing'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.2', require: false
 
